MODON MRE BPDEV/force-app/main/default/objects/Nationality_Countries__mdt/Nationality_Countries__mdt.object-meta.xml
<CustomObject>
    <label>Nationality Countries</label>
    <pluralLabel>Nationality Countries</pluralLabel>
</CustomObject>