MODON MRE BPDEV/force-app/main/default/objects/Nationality_Countries__mdt/fields/Alpha2code__c.field-meta.xml
<CustomField>
    <fullName>Alpha2code__c</fullName>
    <label>Alpha-2 code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>