MODON MRE BPDEV/force-app/main/default/objects/Nationality_Countries__mdt/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <length>80</length>
    <type>Text</type>
</CustomField>