MODON MRE BPDEV/force-app/main/default/objects/Nationality_Countries__mdt/fields/Numeric_Codes__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Codes__c</fullName>
    <label>Numeric Codes</label>
    <length>10</length>
    <type>Text</type>
</CustomField>